--- a/intro/discussion.tex
+++ b/intro/discussion.tex
@@ -17,7 +17,7 @@ In the security proof we need to embed a random preimage $A=\{[\vecb{a}_1],\ldot
 
 \subsubsection{Getting rid of the non-standard assumptions.} Gonzalez et al.~\cite{ACNS:GonRaf16} modify Groth and Lu's proof of correctness of a shuffle \cite{AC:GroLu07} to get rid of the permutation pairing assumption. They showed that the statement ``$[\vecb{a}'_1],\ldots,[\vecb{a}'_m]$ is a permutation of $[\vecb{a}_1],\ldots,[\vecb{a}_m]$'', i.e.~$\{[\vecb{a}'_1],\ldots,[\vecb{a}'_m]\}=\{[\vecb{a}_1],\ldots,[\vecb{a}_m]\}$, can be showed with a proof that $[\vecb{a}'_1],\ldots,[\vecb{a}'_m]\in\{[\vecb{a}_1],\ldots,[\vecb{a}_m]\}$ and a proof that $\sum_{i=1}^m [\vecb{a}'_i]=\sum_{i=1}^m [\vecb{a}_i]$.  Gonzalez et al.~construct a $\Theta(m)$ proof that $[\vecb{a}'_1],\ldots,[\vecb{a}'_m]\in\{[\vecb{a}_1],\ldots\allowbreak,[\vecb{a}_m]\}$ under standard assumptions (DLin in symmetric groups)  and also noted that finding an element on the kernel of $\matr{A}$ is harder than DLin if $\vecb{a}_1,\ldots,\vecb{a}_m\gets\Z_q^2$.
 
-If we use Gonzalez et al.'s techniques we would have to show that for all $[\vecb{a}']\in A',$ $[\vecb{a}']\in A_ \mu$. However, we can't do this since $A_\mu$ is unknown to the verifier. Instead, we are using features of the permutation pairing assumption that where ignored by Gonzalez et al.~and by Groth and Lu. Indeed, we use $h(A_\mu)$ as a constant-size commitment to $A_\mu$ while the permutation pairing assumption helps us to still be able to prove that $A'=A_\mu$. 
+If we use Gonzalez et al.'s techniques we would have to show that for all $[\vecb{a}']\in A',$ $[\vecb{a}']\in A_ \mu$. However, we can't do this since $A_\mu$ is unknown to the verifier. Instead, it seems that we are using stronger properties of the permutation pairing assumption. We use $h(A_\mu)$ as a constant-size computationally binding commitment to the set $A_\mu$, i.e.~invariant under permutations of the input, which is also structure preserving, i.e.~$A_\mu\subset\GG^2$ and $h(A_\mu)\in\GG$. It is an interesting open problem to construct $h$ from standard assumptions (e.g.~DDH, DLin).
 
 \subsubsection{Relation to \cite{AC:GonHevRaf15}.}
 Our construction is similar to the set membership proof of Gonzalez et al.~{\cite[Appendix D.2]{AC:GonHevRaf15}. However, the proof system from \cite{AC:GonHevRaf15} does not suffice for constructing a ring signature because there the CRS is fixed to a specific set and thus, the resulting ring signature will be fixed to a specific ring. 
