--- a/intro/table-eff.tex
+++ b/intro/table-eff.tex
@@ -3,16 +3,16 @@
 \begin{minipage}{\textwidth}
 \begin{center}
 %\begin{scriptsize}
-\begin{tabular}{|l|l|l|}
-\hline
+\begin{tabular}{l|l|l}
+%\hline
                                            & Chandran et al.~\cite{ICALP:ChaGroSah07} & This work \\
-\hline\hline
+\hline%\hline
 \rule{0pt}{2.5ex}CRS size                  & $9$                                       & $9$       \\ 
 \rule{0pt}{2.5ex}Verification key size     & $1$                                       & $5$       \\
 \rule{0pt}{2.5ex}Signature size            & $24 \sqrt{n} + 24$                        & $48 \sqrt[3]{n} + 60$\\    
 \rule{0pt}{2.5ex}Signature generation time & $42 \sqrt{n} + 49$                        & $78 \sqrt[3]{n} + 103$\\
 \rule{0pt}{2.5ex}Verification time         & $3 n + 120 \sqrt{n} + 121$                & $6 n^{2/3} + 268 \sqrt[3]{n} + 291$\\
-\hline 
+%\hline 
 \end{tabular}
 %\end{scriptsize}
 \end{center}
