--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -10,12 +10,12 @@
 
 \pagestyle{plain}
 
-\author{Alonso Gonz\'alez}
-\institute
-{
-	Ecole Normale Sup´\'erieure de Lyon, Laboratoire LIP (France)\\
-	\email{alonso.gonzalez@ens-lyon.fr}
-}
+%\author{Alonso Gonz\'alez}
+%\institute
+%{
+%	Ecole Normale Sup´\'erieure de Lyon, Laboratoire LIP (France)\\
+%	\email{alonso.gonzalez@ens-lyon.fr}
+%}
 
 \title{A Ring Signature of size $\Theta(\sqrt[3]{n})$ without Random Oracles}
 \begin{document}
