--- a/prelim/assumptions.tex
+++ b/prelim/assumptions.tex
@@ -15,11 +15,11 @@ $$
 where $[\matr{Z}]=[\vecb{z}_1\cat\cdots\cat\vecb{z}_m], [\matr{A}]=[\vecb{a}_1\cat\cdots\cat\vecb{a}_m]\in\GG^{2\times m}$,
 is negligible in $\lambda$.
 \end{definition}
-Groth and Lu proved the hardness of the permutation pairing assumption is generic bilinear groups \cite{AC:GroLu07}. 
+Groth and Lu proved the hardness of the permutation pairing assumption in generic bilinear groups \cite{AC:GroLu07}. 
 
 We recall the definition of the decisional linear assumption (in matrix notation) and the kernel matrix Diffie-Hellman assumption.
 
-\begin{definition}[Decisional Diffie-Hellman Assumption (DLin)]\label{def:dlin}
+\begin{definition}[Decisional Linear Assumption (DLin)]\label{def:dlin}
  Let  $\gk 
 \gets \ggen_s(1^\lambda)$ and let
 $$
