--- a/prelim/symm-gs.tex
+++ b/prelim/symm-gs.tex
@@ -16,4 +16,4 @@ Following Groth and Sahai's work \cite{EC:GroSah08}, in symmetric groups and usi
 &\GS.\Com_{ck}([x];\vecb{r}):=\pmatri{{[0]}\\{[0]}\\{[x]}}+r_1[\vecb{u}_1]+{r}_2[\vecb{u}_2]+r_3[\vecb{u}_3]\\
 &\GS.\Com_{ck}(x;\vecb{r}):=x\left([\vecb{u}_1]+\pmatri{{[0]}\\{[0]}\\{[1]}}\right)+{r}_1[\vecb{u}_2]+r_2[\vecb{u}_3]
 \end{align*}
-where $ck:=[\vecb{u}_1\cat[\vecb{u}_2\cat\vecb{u}_3]$, $(\vecb{u}_2\cat\vecb{u}_3)=\matr{A}$, and $\matr{A}$ is the DLin matrix from definition \ref{def:dlin}. The GS reference string is the commitment key $ck$  and $\vecb{u}_1:=w_1\vecb{u}_2+w_2\vecb{u}_3$ in the perfectly binding setting, and $\vecb{u}_1:=w_1\vecb{u}_2+w_2\vecb{u}_3-\vecb{e}_3$ in the perfectly hiding setting, for $w_1,w_2\gets\Z_q$.
+where $ck:=[\vecb{u}_1\cat\vecb{u}_2\cat\vecb{u}_3]$, $(\vecb{u}_2\cat\vecb{u}_3)=\matr{A}$, and $\matr{A}$ is the DLin matrix from definition \ref{def:dlin}. The GS reference string is the commitment key $ck$  and $\vecb{u}_1:=w_1\vecb{u}_2+w_2\vecb{u}_3$ in the perfectly binding setting, and $\vecb{u}_1:=w_1\vecb{u}_2+w_2\vecb{u}_3-\vecb{e}_3$ in the perfectly hiding setting, for $w_1,w_2\gets\Z_q$.
