--- a/intro/high-level.tex
+++ b/intro/high-level.tex
@@ -27,7 +27,7 @@
 %\end{pmatrix}
 %$$
 
-In our scheme the secret/verification keys of party $P$ is $(sk,\vecb{vk})$, where $\vecb{vk}=([vk],[\vecb{a}],\vecb{a}[vk])$, $(sk,[vk])$ are secret/verification keys of the Boneh-Boyen signature scheme, and $\vecb{a}\in\Z_q^2$ is chosen independently for each key from some distribution $\mathcal{Q}$ to be specified later. Suppose that $\vecb{vk}$ is the $\alpha$ th element in the ring $R=\{\vecb{vk}_{1},\ldots,\vecb{vk}_{n}\}$ and let $1\leq i_\alpha,j_\alpha,k_\alpha \leq m$ such that $\vecb{vk}_\alpha = \vecb{vk}_{i_\alpha,j_\alpha,k_\alpha}$, where $\vecb{vk}_{i,j,k}=\vecb{vk}_{(i-1)m^2+(j-1)m+k}$ for $1\leq  i,j,k\leq m$ and $m:=\sqrt[3]{n}$. Below we describe a $\Theta(\sqrt[3]{n})$ set-mebership-proof in $R$.
+In our scheme the secret/verification keys of party $P$ is $(sk,\vecb{vk})$, where $\vecb{vk}=([vk],[\vecb{a}],\vecb{a}[vk])$, $(sk,[vk])$ are secret/verification keys of the Boneh-Boyen signature scheme, and $\vecb{a}\in\Z_q^2$ is chosen independently for each key from some distribution $\mathcal{Q}$ to be specified later. Suppose that $\vecb{vk}$ is the $\alpha$ th element in the ring $R=\{\vecb{vk}_{1},\ldots,\vecb{vk}_{n}\}$ and let $1\leq i_\alpha,j_\alpha,k_\alpha \leq m$ such that $\vecb{vk}_\alpha = \vecb{vk}_{i_\alpha,j_\alpha,k_\alpha}$, where $\vecb{vk}_{i,j,k}=\vecb{vk}_{(i-1)m^2+(j-1)m+k}$ for $1\leq  i,j,k\leq m$ and $m:=\sqrt[3]{n}$. Below we describe a $\Theta(\sqrt[3]{n})$ set-membership-proof in $R$.
 
 Consider the sets
 \begin{align*}
