--- a/prelim/hash.tex
+++ b/prelim/hash.tex
@@ -1,4 +1,4 @@
-We recall the definition of a hash function and also a weaker notion from the work of Rogaway and Shrimpton \cite{FSE:RogShr04}. For both defintions we consider functions $g,h:\mathcal{K}\times\mathcal{M}\to\mathcal{Y}$ and an algorithm $\KGen$ which on input $1^\lambda$ randomly samples an element from $\mathcal{K}$.
+We recall the definition of a hash function and also a weaker notion from the work of Rogaway and Shrimpton \cite{FSE:RogShr04}. For both definitions we consider functions $g,h:\mathcal{K}\times\mathcal{M}\to\mathcal{Y}$ and an algorithm $\KGen$ which on input $1^\lambda$ randomly samples an element from $\mathcal{K}$.
 
 \begin{definition}[Collision Resistance]\label{def:hash1}
  We say that $g$ is a hash-function family with collision resistance if for all PPT adversary $\advA$
@@ -16,7 +16,7 @@ $$
 is negligible in $\lambda$.
 \end{definition}
 
-We instantiate defintion \ref{def:hash1} with the function $g$ and \ref{def:hash2}  with $h$ defined as follows. For both functions $\mathcal{Y}=\GG^2$. In the case of $g$, $\mathcal{M}=\GG^m$ and $\KGen$ picks a group description $gk\gets\ggen_s(1^\lambda)$ together with $[\matr{A}]\in\GG^{2\times m}$, where $\matr{A}\gets\mathcal{Q}_m$, and the function is defined as
+We instantiate definition \ref{def:hash1} with the function $g$ and \ref{def:hash2}  with $h$ defined as follows. For both functions $\mathcal{Y}=\GG^2$. In the case of $g$, $\mathcal{M}=\GG^m$ and $\KGen$ picks a group description $gk\gets\ggen_s(1^\lambda)$ together with $[\matr{A}]\in\GG^{2\times m}$, where $\matr{A}\gets\mathcal{Q}_m$, and the function is defined as
 $$
 g_{[\matr{A}]}([\vecb{x}]):= [\matr{A}\vecb{x}].
 $$
@@ -28,7 +28,7 @@ h(A):= \sum_{[\vecb{a}]\in A}[\vecb{a}].
 $$
 Given $A\gets Q_m$ and a second preimage $A'\in Q_m$ of $h(A)$, it is trivial to construct an adversary breaking the $m$-PPA assumption. Indeed, given $[\matr{A}]$ the challenge of the $m$-PPA assumption, then any matrix $[\matr{A}']$ whose columns are the elements of $A'$ is not a permutation of $[\matr{A}']$ and breaks $m$-PPA assumption. Then for any adversary $\advA$ there is an adversary $\advB$ such that $\adv^{\mathsf{aPre}_g}(\advA)=\adv_{m\mbox{-}\mathsf{PPA}}(\advB)$.
 
-We note that given $A\in Q_m,[\matr{A}]\in\GG^{2\times m},[\vecb{x}]\in\GG^m$ and $[\vecb{y}]\in\GG^2$ one can express the staments $A\in Q_m$, $g_{[\matr{A}]}([\vecb{x}])=[\vecb{y}]$, and $h(A)=[\vecb{x}]$ as equations (\ref{eq:Q}),(\ref{eq:g}), and (\ref{eq:h}), respectively.
+We note that given $A\in Q_m,[\matr{A}]\in\GG^{2\times m},[\vecb{x}]\in\GG^m$ and $[\vecb{y}]\in\GG^2$ one can express the statements $A\in Q_m$, $g_{[\matr{A}]}([\vecb{x}])=[\vecb{y}]$, and $h(A)=[\vecb{x}]$ as equations (\ref{eq:Q}),(\ref{eq:g}), and (\ref{eq:h}), respectively.
  \begin{align}
 &e([a_{2,i}],[1])=e([a_{1,i}],[a_{1,i}]) \text{ for each } 1\leq i\leq m \label{eq:Q}\\
 &\sum_{j=1}^m e([a_{i,j}],[x_i]) = e([y_i],[1]) \text{ for each } i\in\{1,2\} \label{eq:g}\\
