--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -79,6 +79,9 @@
         %\input{intro/high-level}
     	
         \input{our-construction/construction}
+
+%\section{Acknowledgments}
+%Thanks to Carla R\`afols for some useful discussions and to Beno\^it Libert for helpful comments on a previous version of this work.
 \bibliographystyle{abbrv}
 \bibliography{cryptobib/abbrev2,cryptobib/crypto,manualbib}
 
