--- a/intro/tech-overview.tex
+++ b/intro/tech-overview.tex
@@ -1,49 +1,52 @@
 Consider a symmetric bilinear group $gk:=(\GG,\GG_T,e,\mathcal{P},q)$ of prime order $q$, where $\mathcal{P}$ is a generator of $\GG$. Define $[x]=x\mathcal{P}$ for any $x\in\mathbb{Z}_q$.  We will write all group operations using additive notation.
 
-Our main technical tool is a structure preserving -- i.e.~compatible with Groth-Sahai proofs -- hash function with \emph{always second-preimage resistance} (aSec in the terminology of Rogaway and Shrimpton \cite{FSE:RogShr04})
+Our main technical tool is a structure preserving --- i.e.~compatible with Groth-Sahai proofs --- hash function with \emph{always second-preimage resistance} (aSec in the terminology of Rogaway and Shrimpton \cite{FSE:RogShr04})
 \begin{align*}
 h : Q_m &\to \GG^2\\
       A &\mapsto h(A) := \sum_{[\vecb{a}]\in A} [\vecb{a}],
 \end{align*}
  where
 $$
-Q_m:= \{A\subset\GG^2: |A|=m \text{ and }\forall [\vecb{a}]\in A, e([a_2],[1])=e([a_1],[a_1])\}.
+Q_m:= \{A\subset\GG^2: |A|=m \text{ and }\forall [\vecb{a}]\in A, \vecb{a}=(a_1,a_2)^\top\in\Z_q^2 \text{ and } a_2=a_1^2)\}.
 $$
 That is, for a randomly chosen $A\in Q_m$, it is computationally infeasible to find a different $A'\in Q_m$ such that and $h(A)=h(A')$. On Section \ref{sec:hash} we show that the hardness of finding second preimages for $h$ is a direct consequence of the permutation pairing assumption.
+Each set $A\in Q_m$  can be associated to a matrix $[\matr{A}]\in \GG^{2\times m}$ whose columns are the elements of $A$. Such matrix $[\matr{A}]$ is unique up to a permutation of the rows, that is, given two matrices $[\matr{A}],[\matr{A}']$ associated to $A$, there exists a permutation matrix $\matr{P}$ such that $[\matr{A}'] = [\matr{A}]\matr{P}$.
 
 We consider also a family of collision resistant hash functions parameterized by $[\matr{A}]\in\GG^{2\times m}$
 \begin{align*}
-g_{[\matr{A}]} : \GG^m &\to \GG^2\\
+g_{[\matr{A}]} : \Z_q^m &\to \GG^2\\
            [\vecb{x}] &\mapsto g_{[\matr{A}]}([\vecb{x}]) = [\matr{A}\vecb{x}]
-\end{align*} 
- Finding collisions for $g_{[\matr{A}]}$ is as hard as finding a non-zero element in the kernel of $[\matr{A}]$, since
+\end{align*}
+Although $g$ is not efficient computable, we might check whether $g_{[\matr{A}]}([\vecb{x}])=g_{[\matr{A}]}([\vecb{x}'])$ using the pairing operation. Further, we will include public values of the form $[\vecb{a}_ix_i]$, where $[\vecb{a}_i]$ is a column of $[\matr{A}]$ and $[x_i]$ is an element of $[\vecb{x}]$, which render  $g_{[\matr{A}]}([\vecb{x}])$ efficiently computable.
+
+Finding collisions for $g_{[\matr{A}]}$ is as hard as finding a non-zero element in the kernel of $[\matr{A}]$, since
 $$
 g_{[\matr{A}]}([\vecb{x}]) = g_{[\matr{A}]}([\vecb{x}']) \Longleftrightarrow [\matr{A}(\vecb{x}-\vecb{x}')]=[0],
 $$
-which is in general a hard problem known as kernel matrix Diffie-Hellman assumption~\cite{AC:MorRafVil16}. Depending on $\matr{A}$, the KerMDH is a rather mild assumption which encompasses many other assumptions -- e.g.~simultaneous pairing assumption (weaker than DLin) or flexible CDH assumption. If $A$ is randomly chosen from $Q_m$, then finding an element on the kernel of $[\matr{A}]$ was proven hard in generic bilinear groups by Groth and Lu \cite{AC:GroLu07} (although using a different terminology).
+which is in general a hard problem known as kernel matrix Diffie-Hellman (KerMDH) assumption~\cite{AC:MorRafVil16}. Depending on $\matr{A}$, the KerMDH assumption is a rather mild assumption which encompasses many other assumptions --- e.g.~simultaneous double pairing assumption (weaker than DLin) or flexible CDH assumption. If $A$ is randomly chosen from $Q_m$, then finding an element on the kernel of $[\matr{A}]$ was proven hard in generic bilinear groups by Groth and Lu \cite{AC:GroLu07} (although using a different terminology).
 %The KerMDH assumption has found many applications such as constructing constant size QA-NIZK proofs of membership in the linear span of a matrix \cite{EC:LPJY14,EC:KilWee15}.
 
 
-The following fact will be useful in what follows. Given $[\matr{A}],[\matr{A}']\in\GG^{2\times m}$ define $A,A'$ as the sets whose elements are the columns of, respectively, $[\matr{A}]$ and $[\matr{A}']$. Then $g_{[\matr{A}]}([\vecb{x}]) = g_{[\matr{A}']}([\vecb{x}'])$ and $A=A'$ implies that there is a permutation matrix $\matr{P}$ such that $[\vecb{x}]=\matr{P}[\vecb{x}']$ unless $[\vecb{x}],\matr{P}[\vecb{x}']$ is a collision for $g_{[\matr{A}]}$.
+The following fact will be useful in what follows. Consider matrices $[\matr{A}],[\matr{A}']\in\GG^{2\times m}$ associated to sets $A,A'\in Q_m$. Then $g_{[\matr{A}]}([\vecb{x}]) = g_{[\matr{A}']}([\vecb{x}'])$ and $A=A'$ implies that there is a permutation matrix $\matr{P}$ such that $[\vecb{x}]=\matr{P}[\vecb{x}']$ unless $[\vecb{x}],\matr{P}[\vecb{x}']$ is a collision for $g_{[\matr{A}]}$.
 
 \subsubsection{High level description.}
-Our scheme builds on top of the ring signature of Chandran et al.~and improves the underlying $\Theta(\sqrt{n})$ proof that the Groth-Sahai commitment of a Boneh-Boyen signature verification key $[vk]\in\GG$ belongs to the ring of verification keys $R=\{[vk_1],\ldots,[vk_n]\}$. In the rest of this section we simply refer to this proof as a ``set-membership proof'' and we remark that it might be applied to any set of group elements (not only of verification keys).
+Our scheme builds on top of the ring signature of Chandran et al.~and improves the underlying $\Theta(\sqrt{n})$ proof that the opening of a Groth-Sahai commitment is a Boneh-Boyen signature verification key $[vk]\in\GG$ and belongs to the ring of verification keys $R=\{[vk_1],\ldots,[vk_n]\}$. In the rest of this section we simply refer to this proof as a ``set-membership proof'' and we remark that it might be applied to any set of group elements (not only of verification keys).
 
-Our proof consists of two set-membership proofs in sets of size $\Theta(n^{2/3})$ -- i.e.~each proof is of size $\Theta(\sqrt[3]{n})$ --  plus $\Theta(\sqrt[3]{n})$ Groth-Sahai proofs and Groth-Sahai commitments.
-We enlarge the verification key by including $[\vecb{a}]\gets Q_1$ and $sk[\vecb{a}]=\vecb{a}[vk]$, where $[vk]$ is the verification key of a Boneh-Boyen signature and $sk=vk$ is the secret key (recall that $vk$ is the discrete logarithm of $[vk]$). In spite of this differences, our proof also shows $[vk]$ is in $\{[vk_1],\ldots,[vk_n]\}$.
+Our proof consists of two set-membership proofs in sets of size $\Theta(n^{2/3})$ --- i.e.~each proof is of size $\Theta(\sqrt[3]{n})$ ---  plus $\Theta(\sqrt[3]{n})$ Groth-Sahai proofs and Groth-Sahai commitments.
+We enlarge user's verification keys the by including $[\vecb{a}]\gets Q_1$ and $[\vecb{a}vk]=\vecb{a}[vk]$, where $[vk]$ is the verification key of a Boneh-Boyen signature. Thereby, verification key of the $i$ th user is of the form $\vecb{vk}_i:=([vk_i],[\vecb{a}],[\vecb{a}_ivk_i])$. In spite of these differences with Chandran et al.'s verification key, our proof also shows that the opening of a Groth-Sahai commitment is a Boneh-Boyen verification key $[vk_i]$ and belongs to $\{[vk_1],\ldots,[vk_n]\}$.
 
-For a sequence $\{s\}_{1\leq i \leq n}$ define $s_{\mu,\nu}:=s_{(\mu-1)m+\nu}$, where $m:=\sqrt[3]{n}$ and $1\leq\mu\leq n^{2/3},1\leq \nu\leq m$.  The prover and the verifier split the verification keys into $[\vecb{\kappa}_1],\ldots, [\vecb{\kappa}_{n^{2/3}}]$, $A_1,\ldots, A_{n^{2/3}}$, and $[\matr{A}_1],\ldots, [\matr{A}_{n^{2/3}}]$ such that $[\vecb{\kappa}_i]:= ([vk_{i,1}],\ldots,[vk_{i,m}])^\top\in\GG^m, A_i:=\{[\vecb{a}_{i,1}],\ldots,[\vecb{a}_{i,m}]\}\in Q_m$ and $[\matr{A}_i]=[\vecb{a}_{i,1}\cat\cdots\cat\vecb{a}_{i,m}]\in\GG^{2\times m}$. They also define the sets
+Our first step is to arrange the verification keys in $n^{2/3}$ blocks of size $m=\sqrt[3]{n}$. To do so we coin the following notation: for a sequence $\{s\}_{1\leq i \leq n}$ define $s_{\mu,\nu}:=s_{(\mu-1)m+\nu}$, where  $1\leq\mu\leq n^{2/3},1\leq \nu\leq m$.  The prover and the verifier arrange the elements of the verification keys into $[\vecb{\kappa}_1],\ldots, [\vecb{\kappa}_{n^{2/3}}]$, $A_1,\ldots, A_{n^{2/3}}$, and $[\matr{A}_1],\ldots, [\matr{A}_{n^{2/3}}]$ such that $[\vecb{\kappa}_i]:= ([vk_{i,1}],\ldots,[vk_{i,m}])^\top\in\GG^m, A_i:=\{[\vecb{a}_{i,1}],\ldots,[\vecb{a}_{i,m}]\}\in Q_m$ and $[\matr{A}_i]=[\vecb{a}_{i,1}\cat\cdots\cat\vecb{a}_{i,m}]\in\GG^{2\times m}$. They also define the sets
 \begin{align*}
 &H:=\{h(A_1),\ldots,\allowbreak h(A_{n^{2/3}})\}\\
 &G:=\{g_{[\matr{A}_1]}([\vecb{\kappa}_1]),\allowbreak\ldots,g_{[\matr{A}_{n^{2/3}}]}([\vecb{\kappa}_{n^{2/3}}])\},
 \end{align*}
-where $g_{[\matr{A}_i]}([\vecb{\kappa}_i])$ is computed as $\sum_{i=1}^m \vecb{a}_{i,j}[vk_{i,j}]$.
+where $g_{[\matr{A}_i]}([\vecb{\kappa}_i])$ is computed as $[\matr{A}_i\vecb{\kappa}_i]=\sum_{j=1}^m [\vecb{a}_{i,j}vk_{i,j}]$.
 
-The prover starts computing Groth-Sahai commitments to $[vk]=[vk_\alpha]=[vk_{\mu,\nu}]$ and to $h(A_\mu)$, for some $1\leq \alpha \leq n$, and computes the first set-membership proof showing that $h(A_\mu)\in H$.
-The prover commits to each element of $A'=A_\mu$ such that the first committed element is $[\vecb{a}_\alpha]$ and the rest columns are the elements columns of $[\matr{A}_\mu]$. Denote by $[\matr{A}']$ the matrix whose columns are the elements of $A'$ in the order defined before.  The prover shows using Groth-Sahai proofs that $A'\in Q_m$ and that $h(A')=h(A_\mu)$. From this part of the proof we know that, with all but negligible probability, $A'=A_\mu$.
+The prover starts computing Groth-Sahai commitments to $[vk_\alpha]=[vk_{\mu,\nu}]$ and to $h(A_\mu)$, for some $1\leq \alpha \leq n$, and computes the first set-membership proof showing that $h(A_\mu)\in H$.
+The prover commits to each element of $A'=A_\mu$ such that the first committed element is $[\vecb{a}_\alpha]$ and the ones that follow are the other columns of $[\matr{A}_\mu]$ (preserving the order). Denote by $[\matr{A}']$ the matrix whose columns are the elements of $A'$ in the order defined before.  The prover shows using Groth-Sahai proofs that $A'\in Q_m$ and that $h(A')=h(A_\mu)$. From this part of the proof we know that, with all but negligible probability, $A'=A_\mu$.
 
-Next, the prover computes Groth-Sahai commitments to each element of the vector $[\vecb{\kappa}']$, whose first element is $[vk_\alpha]$ and the rest are the other verification keys in $[\vecb{\kappa}_\mu]$, and commits also to $g_{[\matr{A_{\mu'}}]}([\vecb{\kappa}_{\mu'}])$, where $\mu'=\mu$. The second set-membership proof shows that $g_{[\matr{A_{\mu'}}]}([\vecb{\kappa}_{\mu'}])\in G$ and that $\mu'=\mu$. Finally, the prover gives a Groth-Sahai proof that $g_{[\matr{A}']}([\vecb{\kappa}'])=g_{[\matr{A_{\mu'}}]}([\vecb{\kappa}_{\mu'}])$.
+Next, the prover computes Groth-Sahai commitments to each element of the vector $[\vecb{\kappa}']$, whose first element is $[vk_\alpha]$ and the rest are the other verification keys in $[\vecb{\kappa}_\mu]$ (preserving the order), and commits also to $g_{[\matr{A_{\mu'}}]}([\vecb{\kappa}_{\mu'}])$, where $\mu'=\mu$. The second set-membership proof shows that $g_{[\matr{A_{\mu'}}]}([\vecb{\kappa}_{\mu'}])\in G$ and that $\mu'=\mu$. Finally, the prover gives a Groth-Sahai proof that $g_{[\matr{A}']}([\vecb{\kappa}'])=g_{[\matr{A_{\mu'}}]}([\vecb{\kappa}_{\mu'}])$.
 
-Sine $A'=A_\mu$, we conclude that $[\vecb{\kappa}']$ is a permutation of $[\vecb{\kappa}_\mu]$ and thus $[\kappa'_1]=[vk_\alpha]$ is in the ring of verification keys.
+Since $A'=A_\mu$, we conclude that $[\vecb{\kappa}']$ is a permutation of $[\vecb{\kappa}_\mu]$ and thus $[\kappa'_1]=[vk_\alpha]$ is in the ring of verification keys.
 
 
